Massively improved the participant stepper, looks better! Also yoinked the value settings from there. Also new thema which is untested

--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
@@ -1,11 +1,13 @@
 ﻿@inject DriverService _driverService
 
-<MudContainer MaxWidth="MaxWidth.Large">
-    <MudPaper>
-        <MudTable T="Driver" @bind-SelectedItems="@Model.BaseDrivers" Items="@Drivers" MultiSelection="true" Dense="true" Hover="true">
-            <ToolBarContent>
-                <MudText Typo="Typo.h5">Available drivers</MudText>
-            </ToolBarContent>
+<MudContainer MaxWidth="MaxWidth.Medium">
+    <MudPaper Elevation="15">
+        <MudTable T="Driver"
+                  @bind-SelectedItems="@Model.BaseDrivers"
+                  Items="@Drivers"
+                  MultiSelection="true"
+                  Dense="true"
+                  Hover="true">
             <HeaderContent>
                 <MudTh>Name</MudTh>
                 <MudTh>Age</MudTh>
