--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
@@ -1,16 +1,13 @@
 ﻿@inject EngineService _engineService
 
-<MudContainer MaxWidth="MaxWidth.Medium">
-    <MudPaper>
+<MudContainer MaxWidth="MaxWidth.Small">
+    <MudPaper Elevation="15">
         <MudTable T="Engine"
                   Items="@Engines"
                   @bind-SelectedItems="@Model.BaseEngines"
                   MultiSelection="true"
                   Dense="true"
                   Hover="true">
-            <ToolBarContent>
-                <MudText Typo="Typo.h5">Available engines</MudText>
-            </ToolBarContent>
             <HeaderContent>
                 <MudTh>Name</MudTh>
             </HeaderContent>
