--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditEngines.razor
@@ -1,34 +1,20 @@
 ﻿@inject SeasonEntrantService _entrantService
 
-<MudContainer MaxWidth="MaxWidth.Large">
-    <MudPaper>
-        <MudForm @ref="engineForm">
+<MudContainer MaxWidth="MaxWidth.Small">
+    <MudPaper Elevation="15">
+        <MudForm>
             <MudTable T="EditSeasonEngineModel" Items="@Model.SeasonEngines" Hover="true">
                 <HeaderContent>
                     <MudTh>Name</MudTh>
-                    <MudTh>Power</MudTh>
-                    <MudTh>Reliability</MudTh>
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd DataLabel="Name">
                         <MudText Typo="Typo.caption">@context.Name</MudText>
                     </MudTd>
-                    <MudTd DataLabel="Power">
-                        <MudText Typo="Typo.caption">@context.Power</MudText>
-                    </MudTd>
-                    <MudTd DataLabel="Reliability">
-                        <MudText Typo="Typo.caption">@context.Reliability</MudText>
-                    </MudTd>
                 </RowTemplate>
                 <RowEditingTemplate>
                     <MudTd DataLabel="Name">
                         <MudTextField @bind-Value="@context.Name" Required />
-                    </MudTd>
-                    <MudTd DataLabel="Power">
-                        <MudNumericField @bind-Value="@context.Power" />
-                    </MudTd>
-                    <MudTd DataLabel="Reliability">
-                        <MudNumericField @bind-Value="@context.Reliability" />
                     </MudTd>
                 </RowEditingTemplate>
                 <EditButtonContent Context="button">
@@ -49,15 +35,18 @@
     [Parameter]
     public long? PreviousSeasonId { get; set; }
 
-    MudForm engineForm;
-
     protected override async Task OnInitializedAsync()
+    {
+        await SetEngineEditors();
+    }
+
+    private async Task SetEngineEditors()
     {
         List<SeasonEngine>? previousEngines = null;
         if (PreviousSeasonId.HasValue)
             previousEngines = await _entrantService.GetSeasonEngines(PreviousSeasonId.Value);
 
-        foreach (var engine in Model.BaseEngines)
+        foreach (var engine in Model.BaseEngines.Where(e => !(Model.SeasonEngines.Select(se => se.EngineId).Contains(e.Id))))
         {
             SeasonEngine? previousEngine = null;
             if (previousEngines != null)
@@ -71,5 +60,7 @@
 
             Model.SeasonEngines.Add(model);
         }
+
+        Model.RemoveUnsetEngines();
     }
 }
