--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditTeams.razor
@@ -2,8 +2,8 @@
 @inject ManufacturerService _manufacturerService
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge">
-    <MudForm @ref="teamForm">
-        <MudPaper>
+    <MudPaper Elevation="15">
+        <MudForm>
             <MudTable T="EditSeasonTeamModel" Items="@Model.SeasonTeams" Hover="true">
                 <HeaderContent>
                     <MudTh Style="min-width: 200px;">Team</MudTh>
@@ -11,11 +11,6 @@
                     <MudTh Style="min-width: 200px;">Principal</MudTh>
                     <MudTh Style="min-width: 100px;">Colour</MudTh>
                     <MudTh Style="min-width: 100px;">Accent</MudTh>
-                    <MudTh Class="number-col-lg">Base</MudTh>
-                    <MudTh Class="number-col-lg">Aero</MudTh>
-                    <MudTh Class="number-col-lg">Chassis</MudTh>
-                    <MudTh Class="number-col-lg">Power</MudTh>
-                    <MudTh Class="number-col-lg">Rel.</MudTh>
                     <MudTh Style="min-width: 200px;">Manufacturer</MudTh>
                 </HeaderContent>
                 <RowTemplate>
@@ -33,18 +28,6 @@
                     </MudTd>
                     <MudTd DataLabel="Accent" Style="@ViewHelper.SetBackgroundColour(context.Accent)">
                         @context.Accent
-                    </MudTd>
-                    <MudTd DataLabel="Base">
-                        <MudText Typo="Typo.caption">@context.BaseValue</MudText>
-                    </MudTd>
-                    <MudTd DataLabel="Aero">
-                        <MudText Typo="Typo.caption">@context.Aero</MudText>
-                    </MudTd>
-                    <MudTd DataLabel="Chassis">
-                        <MudText Typo="Typo.caption">@context.Chassis</MudText>
-                    </MudTd>
-                    <MudTd DataLabel="Powertrain">
-                        <MudText Typo="Typo.caption">@context.Powertrain</MudText>
                     </MudTd>
                     <MudTd DataLabel="Reliability">
                         <MudText Typo="Typo.caption">@context.Reliability</MudText>
@@ -69,21 +52,6 @@
                     <MudTd DataLabel="Accent">
                         <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" />
                     </MudTd>
-                    <MudTd DataLabel="Base">
-                        <MudNumericField @bind-Value="@context.BaseValue" />
-                    </MudTd>
-                    <MudTd DataLabel="Aero">
-                        <MudNumericField @bind-Value="@context.Aero" />
-                    </MudTd>
-                    <MudTd DataLabel="Chassis">
-                        <MudNumericField @bind-Value="@context.Chassis" />
-                    </MudTd>
-                    <MudTd DataLabel="Powertrain">
-                        <MudNumericField @bind-Value="@context.Powertrain" />
-                    </MudTd>
-                    <MudTd DataLabel="Reliability">
-                        <MudNumericField @bind-Value="@context.Reliability" />
-                    </MudTd>
                     <MudTd DataLabel="Manufacturer">
                         <MudSelect T="long" @bind-Value="@context.ManufacturerId" Required>
                             @foreach (var manufacturer in manufacturers)
@@ -94,11 +62,11 @@
                     </MudTd>
                 </RowEditingTemplate>
                 <EditButtonContent Context="button">
-                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" Class="pa-0" OnClick="@button.ButtonAction" />
+                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@button.ButtonAction" Class="pa-0" />
                 </EditButtonContent>
             </MudTable>
-        </MudPaper>
-    </MudForm>
+        </MudForm>
+    </MudPaper>
 </MudContainer>
 
 @code {
@@ -113,17 +81,20 @@
 
     List<Manufacturer> manufacturers;
 
-    MudForm teamForm;
-
     protected override async Task OnInitializedAsync()
     {
         manufacturers = await _manufacturerService.GetManufacturers();
 
+        await SetTeamEditors();
+    }
+
+    private async Task SetTeamEditors()
+    {
         List<SeasonTeam>? previousTeams = null;
         if (PreviousSeasonId.HasValue)
             previousTeams = await _entrantService.GetSeasonTeams(PreviousSeasonId.Value);
 
-        foreach (var team in Model.BaseTeams)
+        foreach (var team in Model.BaseTeams.Where(e => !(Model.SeasonTeams.Select(st => st.TeamId).Contains(e.Id))))
         {
             SeasonTeam? previousTeam = null;
             if (previousTeams != null)
@@ -140,6 +111,8 @@
 
             Model.SeasonTeams.Add(model);
         }
+
+        Model.RemoveUnsetTeams();
     }
 
     private string ReadManufacturerName(long id)
