--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
@@ -3,125 +3,84 @@
 
 <MudContainer MaxWidth="MaxWidth.False">
     <MudGrid>
-        <MudItem xs="12">
-            <MudPaper>
-                <MudStack>
-                    <MudText>Season participants</MudText>
-                    <MudSpacer />
-                    <MudButton Variant="Variant.Filled" Color="Color.Success" OnClick="AddAllEntrants">Confirm and save</MudButton>
-                </MudStack>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="6">
-            <MudPaper>
-                <MudTable Items="@Model.SeasonDrivers">
-                    <ToolBarContent>
-                        <MudText Typo="Typo.h6">Participating drivers</MudText>
-                    </ToolBarContent>
-                    <HeaderContent>
-                        <MudTh>Name</MudTh>
-                        <MudTh>Number</MudTh>
-                        <MudTh>Skill</MudTh>
-                        <MudTh>Reliability</MudTh>
-                        <MudTh>TeamRole</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd DataLabel="Name">
-                            <MudStack Row="true" Spacing="1" Class="align-center">
-                                <MudText>@context.Driver.FullName</MudText>
-                                <MudSpacer />
-                                <CountryFlag Code="@context.Driver.Country" Size="FlagSize.Small" />
-                            </MudStack>
-                        </MudTd>
-                        <MudTd DataLabel="Number">
-                            <MudText Typo="Typo.caption">@context.Number</MudText>
-                        </MudTd>
-                        <MudTd DataLabel="Skill">
-                            <MudText Typo="Typo.caption">@context.Skill</MudText>
-                        </MudTd>
-                        <MudTd DataLabel="Reliability">
-                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
-                        </MudTd>
-                        <MudTd DataLabel="TeamRole">
-                            <MudText>@context.TeamRole</MudText>
-                        </MudTd>
-                    </RowTemplate>
-                </MudTable>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="6">
-            <MudPaper>
+        <MudItem xs="3">
+            <MudPaper Elevation="5">
                 <MudTable Items="@Model.SeasonEngines">
                     <ToolBarContent>
-                        <MudText Typo="Typo.h6">Participating engines</MudText>
+                        <MudText Typo="Typo.h6">Engines</MudText>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
-                        <MudTh>Power</MudTh>
-                        <MudTh>Reliability</MudTh>
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd DataLabel="Name">
                             <MudText>@context.Name</MudText>
                         </MudTd>
-                        <MudTd DataLabel="Power">
-                            <MudText Typo="Typo.caption">@context.Power</MudText>
-                        </MudTd>
-                        <MudTd DataLabel="Reliability">
-                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
-                        </MudTd>
                     </RowTemplate>
                 </MudTable>
             </MudPaper>
         </MudItem>
-        <MudItem xs="12">
-            <MudPaper>
+        <MudItem xs="5">
+            <MudPaper Elevation="5">
                 <MudTable Items="@Model.SeasonTeams">
                     <ToolBarContent>
-                        <MudText Typo="Typo.h6">Participating teams</MudText>
+                        <MudText Typo="Typo.h6">Teams</MudText>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>Name</MudTh>
                         <MudTh>Principal</MudTh>
                         <MudTh>Colour</MudTh>
                         <MudTh>Accent</MudTh>
-                        <MudTh>BaseValue</MudTh>
-                        <MudTh>Aero</MudTh>
-                        <MudTh>Chassis</MudTh>
-                        <MudTh>Powertrain</MudTh>
-                        <MudTh>Reliability</MudTh>
+                        <MudTh>Engine</MudTh>
                     </HeaderContent>
                     <RowTemplate>
                         <MudTd DataLabel="Name">
-                            <MudStack Row="true" Spacing="1" Class="align-center">
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText>@context.Name</MudText>
                                 <MudSpacer />
-                                <CountryFlag Code="@context.Team.Country" Size="FlagSize.Small" />
+                                <CountryFlag Code="@(context.Team?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
                             </MudStack>
                         </MudTd>
                         <MudTd DataLabel="Principal">
                             <MudText>@context.Principal</MudText>
                         </MudTd>
-                        <MudTd DataLabel="Colour">
-                            @context.Colour
+                        <MudTd DataLabel="Colour" Style="@ViewHelper.SetBackgroundColour(context.Colour)">
+                            <MudText>@context.Colour</MudText>
                         </MudTd>
-                        <MudTd DataLabel="Accent">
-                            @context.Accent
+                        <MudTd DataLabel="Accent" Style="@ViewHelper.SetBackgroundColour(context.Accent)">
+                            <MudText>@context.Accent</MudText>
                         </MudTd>
-                        <MudTd DataLabel="BaseValue">
-                            <MudText Typo="Typo.caption">@context.BaseValue</MudText>
+                        <MudTd>
+                            <MudText>@(ReadEngineName(context.BaseEngineId))</MudText>
                         </MudTd>
-                        <MudTd DataLabel="Aero">
-                            <MudText Typo="Typo.caption">@context.Aero</MudText>
+                    </RowTemplate>
+                </MudTable>
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="4">
+            <MudPaper Elevation="5">
+                <MudTable Items="@Model.SeasonDrivers">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h6">Drivers</MudText>
+                    </ToolBarContent>
+                    <HeaderContent>
+                        <MudTh>Name</MudTh>
+                        <MudTh>Number</MudTh>
+                        <MudTh>TeamRole</MudTh>
+                    </HeaderContent>
+                    <RowTemplate>
+                        <MudTd DataLabel="Name">
+                            <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                                <MudText>@context.Driver?.FullName</MudText>
+                                <MudSpacer />
+                                <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                            </MudStack>
                         </MudTd>
-                        <MudTd DataLabel="Chassis">
-                            <MudText Typo="Typo.caption">@context.Chassis</MudText>
+                        <MudTd DataLabel="Number">
+                            <MudText Typo="Typo.caption">@context.Number</MudText>
                         </MudTd>
-                        <MudTd DataLabel="Powertrain">
-                            <MudText Typo="Typo.caption">@context.Powertrain</MudText>
-                        </MudTd>
-                        <MudTd DataLabel="Reliability">
-                            <MudText Typo="Typo.caption">@context.Reliability</MudText>
+                        <MudTd DataLabel="TeamRole">
+                            <MudText>@context.TeamRole</MudText>
                         </MudTd>
                     </RowTemplate>
                 </MudTable>
@@ -145,6 +104,8 @@
 
         await _entrantService.PersistSeasonEntrants(rootEntrants);
 
-       _nav.NavigateTo($"/overview/{SeasonId}");
+        _nav.NavigateTo($"/overview/{SeasonId}");
     }
+
+    private string ReadEngineName(long id) => Model.SeasonEngines.Find(e => e.EngineId == id)?.Name ?? "Unknown";
 }
