--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -23,9 +23,10 @@
             ToggledIcon="@Icons.Material.Filled.DarkMode" ToggledColor="Color.Warning" ToggledTitle="Dark" />
         
         <MudMenu Icon="@Icons.Material.Filled.Palette" Color="Color.Tertiary">
-            <MudMenuItem OnClick="SetDefaultTheme">Default</MudMenuItem>
-            <MudMenuItem OnClick="SetSynthTheme">Synth</MudMenuItem>
-            <MudMenuItem OnClick="SetSynthAltTheme">Alt synth</MudMenuItem>
+            <MudMenuItem OnClick="SetSynthTheme">Synth (Tri)</MudMenuItem>
+            <MudMenuItem OnClick="SetSynthAltTheme">Synth (Anal)</MudMenuItem>
+            <MudMenuItem OnClick="SetOceanicTheme">Oceanic</MudMenuItem>
+            <MudMenuItem OnClick="SetDefaultTheme">Basic</MudMenuItem>
         </MudMenu>
 
         <MudIconButton Href="/guide" Icon="@Icons.Material.Filled.MenuBook" Color="Color.Tertiary" />
@@ -58,6 +59,7 @@
     void SetDefaultTheme() => theme = Constants.DefaultTheme;
     void SetSynthTheme() => theme = Constants.SynthTheme;
     void SetSynthAltTheme() => theme = Constants.SynthAnalTheme;
+    void SetOceanicTheme() => theme = Constants.OceanicTheme;
 
     public void Dispose()
     {
