--- a/SimTECH/SimTECH/Components/CountryNamedFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryNamedFlag.razor
@@ -1,5 +1,6 @@
-﻿<MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+﻿<MudStack Row="true" AlignItems="AlignItems.Center" Reverse="@Reverse" Class="pa-0">
     <CountryFlag Code="@Code" Size="@Size" Class="@Class" />
+    <MudSpacer />
     <MudText Class="ml-2">@flagNationName</MudText>
 </MudStack>
 
@@ -12,6 +13,9 @@
 
     [Parameter]
     public string Class { get; set; } = string.Empty;
+
+    [Parameter]
+    public bool Reverse { get; set; } = false;
 
     private string flagNationName
     {
